--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.simpleknowledgebase.ui.home.HomeFragment"
+        android:name="com.example.simpleknowledgebase.fragments.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.simpleknowledgebase.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_advanced_search"
+        android:name="com.example.simpleknowledgebase.fragments.AdvancedSearchFragment"
+        android:label="@string/menu_advancedSearch"
+        tools:layout="@layout/fragment_advanced_search" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.simpleknowledgebase.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_add_entry"
+        android:name="com.example.simpleknowledgebase.fragments.AddEntryFragment"
+        android:label="@string/menu_addEntry"
+        tools:layout="@layout/fragment_add_entry" />
 </navigation>
