--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.simpleknowledgebase.fragments.HomeFragment"
+        android:name="com.example.simpleknowledgebase.fragments.KeywordSearchFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_keyword_search" />
 
     <fragment
         android:id="@+id/nav_advanced_search"
