--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,11 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_home" />
         <item
+            android:id="@+id/categoryOverviewFragment"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_Category" />
+        <item
             android:id="@+id/nav_advanced_search"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_advancedSearch" />
         <item
             android:id="@+id/nav_add_entry"
