CategoryOverview*, fragment to list categories in own fragment added, TBD: ClickListener when category row is clicked

--- a/app/src/main/res/layout/fragment_keyword_search.xml
+++ b/app/src/main/res/layout/fragment_keyword_search.xml
@@ -45,7 +45,10 @@
         android:layout_height="wrap_content"
         android:text="@string/keyword_btn_addEntry"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline1"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/keyword_btn_categoryOverview"
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
     <TextView
@@ -109,7 +112,20 @@
         android:layout_height="wrap_content"
         android:text="@string/keyword_btn_advancedSearch"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintEnd_toStartOf="@+id/keyword_btn_categoryOverview"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+    <Button
+        android:id="@+id/keyword_btn_categoryOverview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/keyword_btn_categoryOverview"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/keyword_btn_addEntry"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/keyword_btn_advancedSearch"
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
