--- a/app/src/main/res/layout/fragment_category_overview_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_category_overview_recycler_view.xml
@@ -9,6 +9,8 @@
         android:id="@+id/categoryOverview_tv_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
