--- a/app/src/main/res/layout/fragment_add_entry.xml
+++ b/app/src/main/res/layout/fragment_add_entry.xml
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveButtons" />
 
     <Button
-        android:id="@+id/buttonBackToKeyword"
+        android:id="@+id/addEntry_btn_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/black"
