AdvancedSearchFragment.kt, search by text field: displaying Entrires in RecyclerView added

--- a/app/src/main/res/layout/fragment_advanced_search.xml
+++ b/app/src/main/res/layout/fragment_advanced_search.xml
@@ -187,7 +187,7 @@
         android:layout_height="wrap_content"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
         app:layout_constraintTop_toTopOf="@+id/guideline19"
         tools:visibility="visible" />
 
